tests/errors/first_stage/.data/argument_expected/argument_expected.as
; a .data argument was expected between two ','
myData: .data 1, ,3, 4